BluetoothSocketCloseFunction: Fix accessing unpopulated params_.

CL d06a25798ef3bb7a88276030a64c9af18d424467 stopped using
populating |params_| and started using local variables instead. However,
one reference to |params_| still remained that is causing null pointer
access.

Fix this and also remove all bluetooth APIs' params_ where they
are currently never used.

Add a regression (unit) test as well, along with a small sanity test.

Bug: 831651
Test: See bug for repro steps.
Change-Id: Ic2df916bb7175563e21c816890bac1c8624d334f
Reviewed-on: https://chromium-review.googlesource.com/1008065
Reviewed-by: James Hawkins <jhawkins@chromium.org>
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550019}